<resources>
    <string name="app_name">MovieApp</string>
    <string name="trends">Trends</string>
    <string name="search">Search</string>
    <string name="favorites">Favorites</string>
    <string name="searchMovie">Search Movie</string>
    <string name="settings">Settings</string>
    <string name="addToFavorites">Add to favorites</string>
    <string name="addedToFavorites">Added to favorites</string>
    <string name="description">Description:</string>
    <string name="releaseDate">Release Date:</string>
    <string name="voteAverage">Vote Average:</string>
    <string name="voteCount">Vote Count:</string>
</resources>